crates/pina_macros/tests/ui/fail/accounts_missing_lifetime.rs
use pina::*;

#[derive(Accounts)]
pub struct MissingLifetimeAccounts {
	pub payer: AccountView,
}

fn main() {}
